syntax = "proto3";

package notekeeper;

import public "common.proto";
import public "title.proto";

// This is just note metadata
// Note content is treated separately
message Note {
	string id = 1;
	string notebookId = 2;
	string ownerId = 3;
	string storeId = 4;
	string store = 5; // shelf or collection
	Title name = 6;
	string type = 7;
	int32 revisions = 8;
	bool locked = 9;
	string created = 10;
	string updated = 11;
}

message CreateNoteRequest {
	RequestHeader header = 1;
	string notebookId = 2;
	string storeId = 3;
	string ownerId = 4;
	string store = 5;
	Title name = 6;
}
// Response is an IdResponse

message SaveNoteRequest {
	RequestHeader header = 1;
	string id = 2;
	string notebookId = 3;
	string storeId = 4;
	string ownerId = 5;
	string store = 6;
	Title name = 7;
}
// Response is an EmptyResponse

message DeleteNoteRequest {
	RequestHeader header = 1;
	string id = 2;
	string notebookId = 3;
	string storeId = 4;
	string ownerId = 5;
	string store = 6;
}
// Response is an EmptyResponse

message LoadNoteRequest {
	RequestHeader header = 1;
	string id = 2;
	string storeId = 3;
	string ownerId = 4;
	string store = 5;
}

message LoadNoteResponse {
	ResponseHeader header = 1;
	Note note = 2;
}

message GetNotesRequest {
	RequestHeader header = 1;
	string notebookId = 2;
	string storeId = 3;
	string ownerId = 4;
	string store = 5;
}

message GetNotesResponse {
	ResponseHeader header = 1;
	repeated Note notes = 2;
}
